maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:59: error: value getCell is not a member of plm.universe.World
	getWorld().getCell(x,y)
                   ^